--- a/src/app/pages/order-detail/order-detail.component.html
+++ b/src/app/pages/order-detail/order-detail.component.html
@@ -1,23 +1,22 @@
 <div class="container shopping-bag">
-  <h4>Shopping Bag</h4>
-  <div class="t-head row">
+  <h4 class="my-4">Shopping Bag</h4>
+  <div class="t-head row align-middle py-3 mb-3">
     <div class="col-5">
-      Product
+      <p class="mb-0">Product</p>
     </div>
     <div class="col-2">
-      <p>Size</p>
+      <p class="mb-0">Size</p>
     </div>
     <div class="col-2">
-      <p>Quantity</p>
+      <p class="mb-0">Quantity</p>
     </div>
     <div class="col-2">
-      <p>Price</p>
+      <p class="mb-0">Price</p>
     </div>
     <div class="col">
-      <p>Remove</p>
+      <p class="mb-0">Remove</p>
     </div>
   </div>
-  <div class="line my-3"></div>
   <div class="t-row1 row">
     <div class="col-2">
       <img src="assets/img/product-detail/bag-prd1.png">
@@ -56,4 +55,17 @@
     </div>
   </div>
   <div class="line my-3"></div>
+  <div class="row">
+    <div class="col-3">
+      <button class="btn btn-sec btnlg" type="button">Send a personal note</button>
+    </div>
+    <div class="col-4"></div>
+    <div class="col-5">
+      <div class="d-flex">
+        <p class="me-auto mdt">Subtotal</p>
+        <span class="mdt">$11,700</span>
+      </div>
+      <p class="smt">Receive it in Vietnam in 4 - 6 business day/s with Express Shipping.</p>
+    </div>
+  </div>
 </div>
