--- a/src/app/pages/product-detail/product-detail.component.html
+++ b/src/app/pages/product-detail/product-detail.component.html
@@ -472,14 +472,20 @@
               </div>
             </div>
             <div class="col-3">
-              <div class="card-prd">
-                <div class="img">
-                  <a href="#">
-                    <img src="./assets/img/product-detail/also-like8.png">
-                  </a>
+              <div class="item-card-info">
+                <div class="card-prd">
+                  <div class="img">
+                    <a href="#">
+                      <img src="./assets/img/product-detail/also-like8.png">
+                    </a>
+                  </div>
+                  <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#compare">
+                    View details
+                  </div>
                 </div>
-                <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#compare">
-                  View details
+                <div class="item-inf text-center mt-3">
+                  <p class="mdt mb-2">Lynn Ring</p>
+                  <p>$7,000</p>
                 </div>
               </div>
             </div>
@@ -488,50 +494,74 @@
         <div class="carousel-item">
           <div class="row">
             <div class="col-3">
-              <div class="card-prd">
-                <div class="img">
-                  <a href="#">
-                    <img src="./assets/img/product-detail/also-like5.png">
-                  </a>
+              <div class="item-card-info">
+                <div class="card-prd">
+                  <div class="img">
+                    <a href="#">
+                      <img src="./assets/img/product-detail/also-like5.png">
+                    </a>
+                  </div>
+                  <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#compare">
+                    View details
+                  </div>
                 </div>
-                <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#compare">
-                  View details
-                </div>
-              </div>
-            </div>
-            <div class="col-3">
-              <div class="card-prd">
-                <div class="img">
-                  <a href="#">
-                    <img src="./assets/img/product-detail/also-like6.png">
-                  </a>
-                </div>
-                <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#compare">
-                  View details
+                <div class="item-inf text-center mt-3">
+                  <p class="mdt mb-2">Lynn Ring</p>
+                  <p>$7,000</p>
                 </div>
               </div>
             </div>
             <div class="col-3">
-              <div class="card-prd">
-                <div class="img">
-                  <a href="#">
-                    <img src="./assets/img/product-detail/also-like7.png">
-                  </a>
+              <div class="item-card-info">
+                <div class="card-prd">
+                  <div class="img">
+                    <a href="#">
+                      <img src="./assets/img/product-detail/also-like6.png">
+                    </a>
+                  </div>
+                  <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#compare">
+                    View details
+                  </div>
                 </div>
-                <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#compare">
-                  View details
+                <div class="item-inf text-center mt-3">
+                  <p class="mdt mb-2">Lynn Ring</p>
+                  <p>$7,000</p>
                 </div>
               </div>
             </div>
             <div class="col-3">
-              <div class="card-prd">
-                <div class="img">
-                  <a href="#">
-                    <img src="./assets/img/product-detail/also-like8.png">
-                  </a>
+              <div class="item-card-info">
+                <div class="card-prd">
+                  <div class="img">
+                    <a href="#">
+                      <img src="./assets/img/product-detail/also-like7.png">
+                    </a>
+                  </div>
+                  <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#compare">
+                    View details
+                  </div>
                 </div>
-                <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#compare">
-                  View details
+                <div class="item-inf text-center mt-3">
+                  <p class="mdt mb-2">Lynn Ring</p>
+                  <p>$7,000</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-3">
+              <div class="item-card-info">
+                <div class="card-prd">
+                  <div class="img">
+                    <a href="#">
+                      <img src="./assets/img/product-detail/also-like8.png">
+                    </a>
+                  </div>
+                  <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#compare">
+                    View details
+                  </div>
+                </div>
+                <div class="item-inf text-center mt-3">
+                  <p class="mdt mb-2">Lynn Ring</p>
+                  <p>$7,000</p>
                 </div>
               </div>
             </div>
