--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -41,37 +41,41 @@
       <!--dropdown-menu-start-->
       <li class="nav-item dropdown">
         <a class="nav-link dropbtn" routerLink="/shop-all">Shop All</a>
-        <div class="dropdown-content mtp">
-          <table class="table">
-            <thead>
-              <tr>
-                <th scope="col"><a routerLink="/shop-all/rings">Rings</a></th>
-                <th scope="col"><a routerLink="/earrings">Earrings</a></th>
-                <th scope="col"><a routerLink="/bracelets">Bracelets</a></th>
-                <th scope="col"><a routerLink="/necklaces">Necklaces</a></th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <td><a routerLink="#">Eternity</a></td>
-                <td><a routerLink="#">Stud</a></td>
-                <td><a routerLink="#">Chain</a></td>
-                <td><a routerLink="#">Chain</a></td>
-              </tr>
-              <tr>
-                <td><a routerLink="#">Cocktail</a></td>
-                <td><a routerLink="#">Drop & Dangle</a></td>
-                <td><a routerLink="#">Bangle</a></td>
-                <td><a routerLink="#">Everyday</a></td>
-              </tr>
-              <tr>
-                <td><a routerLink="#">Wedding</a></td>
-                <td><a routerLink="#">Hoop</a></td>
-                <td><a routerLink="#">Tennis</a></td>
-                <td><a routerLink="#">Layering</a></td>
-              </tr>
-            </tbody>
-          </table>
+        <div class="dropdown-content mt-2">
+          <div class="row">
+            <div class="col-3">
+              <ul>
+                <li class="category"><a routerLink="/shop-all/rings">Rings</a></li>
+                <li><a routerLink="#">Eternity</a></li>
+                <li><a routerLink="#">Cocktail</a></li>
+                <li><a routerLink="#">Wedding</a></li>
+              </ul>
+            </div>
+            <div class="col-3">
+              <ul>
+                <li class="category"><a routerLink="/earrings">Earrings</a></li>
+                <li><a routerLink="#">Stud</a></li>
+                <li><a routerLink="#">Drop & Dangle</a></li>
+                <li><a routerLink="#">Hoop</a></li>
+              </ul>
+            </div>
+            <div class="col-3">
+              <ul>
+                <li class="category"><a routerLink="/bracelets">Bracelets</a></li>
+                <li><a routerLink="#">Chain</a></li>
+                <li><a routerLink="#">Bangle</a></li>
+                <li><a routerLink="#">Tennis</a></li>
+              </ul>
+            </div>
+            <div class="col-3">
+              <ul>
+                <li class="category"><a routerLink="/necklaces">Necklaces</a></li>
+                <li><a routerLink="#">Chain</a></li>
+                <li><a routerLink="#">Everyday</a></li>
+                <li><a routerLink="#">Layering</a></li>
+              </ul>
+            </div>
+          </div>
         </div>
       </li>
       <!--dropdown-menu-start-->
