--- a/src/app/pages/order-detail/order-detail.component.html
+++ b/src/app/pages/order-detail/order-detail.component.html
@@ -1,71 +1,325 @@
 <div class="container shopping-bag">
   <h4 class="my-4">Shopping Bag</h4>
-  <div class="t-head row align-middle py-3 mb-3">
-    <div class="col-5">
-      <p class="mb-0">Product</p>
+  <div class="table-summary">
+    <div class="t-head row align-middle py-3 mb-3">
+      <div class="col-5">
+        <p class="mb-0">Product</p>
+      </div>
+      <div class="col-2">
+        <p class="mb-0">Size</p>
+      </div>
+      <div class="col-2">
+        <p class="mb-0">Quantity</p>
+      </div>
+      <div class="col-2">
+        <p class="mb-0">Price</p>
+      </div>
+      <div class="col">
+        <p class="mb-0">Remove</p>
+      </div>
     </div>
-    <div class="col-2">
-      <p class="mb-0">Size</p>
+    <div class="t-row1 row">
+      <div class="col-2">
+        <img src="assets/img/product-detail/bag-prd1.png">
+      </div>
+      <div class="col-3">
+        <p>AMEL EARRING</p>
+      </div>
+      <div class="col-2">
+        <p>6</p>
+      </div>
+      <div class="col-2"></div>
+      <div class="col-2">
+        <p>$6,700</p>
+      </div>
+      <div class="col">
+        <i class="fa-solid fa-xmark"></i>
+      </div>
     </div>
-    <div class="col-2">
-      <p class="mb-0">Quantity</p>
+    <div class="line my-3"></div>
+    <div class="t-row2 row">
+      <div class="col-2">
+        <img src="assets/img/product-detail/bag-prd2.png">
+      </div>
+      <div class="col-3">
+        <p>AMEL EARRING</p>
+      </div>
+      <div class="col-2">
+        <p>6</p>
+      </div>
+      <div class="col-2"></div>
+      <div class="col-2">
+        <p>$6,700</p>
+      </div>
+      <div class="col">
+        <i class="fa-solid fa-xmark"></i>
+      </div>
     </div>
-    <div class="col-2">
-      <p class="mb-0">Price</p>
-    </div>
-    <div class="col">
-      <p class="mb-0">Remove</p>
-    </div>
+    <div class="line my-3"></div>
   </div>
-  <div class="t-row1 row">
-    <div class="col-2">
-      <img src="assets/img/product-detail/bag-prd1.png">
-    </div>
-    <div class="col-3">
-      <p>AMEL EARRING</p>
-    </div>
-    <div class="col-2">
-      <p>6</p>
-    </div>
-    <div class="col-2"></div>
-    <div class="col-2">
-      <p>$6,700</p>
-    </div>
-    <div class="col">
-      <i class="fa-solid fa-xmark"></i>
-    </div>
-  </div>
-  <div class="line my-3"></div>
-  <div class="t-row2 row">
-    <div class="col-2">
-      <img src="assets/img/product-detail/bag-prd2.png">
-    </div>
-    <div class="col-3">
-      <p>AMEL EARRING</p>
-    </div>
-    <div class="col-2">
-      <p>6</p>
-    </div>
-    <div class="col-2"></div>
-    <div class="col-2">
-      <p>$6,700</p>
-    </div>
-    <div class="col">
-      <i class="fa-solid fa-xmark"></i>
-    </div>
-  </div>
-  <div class="line my-3"></div>
   <div class="row">
-    <div class="col-3">
+    <div class="col-3 ps-0">
       <button class="btn btn-sec btnlg" type="button">Send a personal note</button>
     </div>
     <div class="col-4"></div>
-    <div class="col-5">
-      <div class="d-flex">
-        <p class="me-auto mdt">Subtotal</p>
-        <span class="mdt">$11,700</span>
+    <div class="col-5 pe-0">
+      <div class="d-flex mb-4">
+        <h6 class="me-auto">Subtotal</h6>
+        <h6>$11,700</h6>
       </div>
       <p class="smt">Receive it in Vietnam in 4 - 6 business day/s with Express Shipping.</p>
+      <div class="form-check my-3">
+        <input class="form-check-input" type="radio" value="" id="flexCheckChecked" checked>
+        <label class="form-check-label smt" for="flexCheckChecked">
+          I accept the terms and conditions, privacy policy and legal notice
+        </label>
+      </div>
+      <button class="btn btn-pri btnlg" type="button" routerLink="/check-out">Check out</button>
+      <p class="mt-3 smt">Do you have a coupon? Add it at checkout.</p>
     </div>
+  </div>
+</div>
+<!--MAY YOU ALSO LIKE-->
+<div class="also-like">
+  <h5 class="text-center">You May Also Like</h5>
+  <div id="carouselalsolike" class="carousel slide carousel-dark carousel-also" data-bs-ride="true">
+    <div class="carousel-inner container">
+      <div class="carousel-item active">
+        <div class="row">
+          <div class="col-3">
+            <div class="item-card-info">
+              <div class="card-prd">
+                <div class="img">
+                  <a href="#">
+                    <img src="./assets/img/product-detail/also-like1.png">
+                  </a>
+                </div>
+                <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#compare">
+                  Quick view
+                </div>
+              </div>
+              <div class="item-inf text-center mt-3">
+                <p class="mdt mb-2">Lynn Ring</p>
+                <p>$7,000</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-3">
+            <div class="item-card-info">
+              <div class="card-prd">
+                <div class="img">
+                  <a href="#">
+                    <img src="./assets/img/product-detail/also-like2.png">
+                  </a>
+                </div>
+                <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#compare">
+                  Quick view
+                </div>
+              </div>
+              <div class="item-inf text-center mt-3">
+                <p class="mdt mb-2">Lynn Ring</p>
+                <p>$7,000</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-3">
+            <div class="item-card-info">
+              <div class="card-prd">
+                <div class="img">
+                  <a href="#">
+                    <img src="./assets/img/product-detail/also-like3.png">
+                  </a>
+                </div>
+                <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#compare">
+                  Quick view
+                </div>
+              </div>
+              <div class="item-inf text-center mt-3">
+                <p class="mdt mb-2">Lynn Ring</p>
+                <p>$7,000</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-3">
+            <div class="item-card-info">
+              <div class="card-prd">
+                <div class="img">
+                  <a href="#">
+                    <img src="./assets/img/product-detail/also-like4.png">
+                  </a>
+                </div>
+                <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#compare">
+                  Quick view
+                </div>
+              </div>
+              <div class="item-inf text-center mt-3">
+                <p class="mdt mb-2">Lynn Ring</p>
+                <p>$7,000</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <div class="row">
+          <div class="col-3">
+            <div class="item-card-info">
+              <div class="card-prd">
+                <div class="img">
+                  <a href="#">
+                    <img src="./assets/img/product-detail/also-like5.png">
+                  </a>
+                </div>
+                <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#compare">
+                  Quick view
+                </div>
+              </div>
+              <div class="item-inf text-center mt-3">
+                <p class="mdt mb-2">Lynn Ring</p>
+                <p>$7,000</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-3">
+            <div class="item-card-info">
+              <div class="card-prd">
+                <div class="img">
+                  <a href="#">
+                    <img src="./assets/img/product-detail/also-like6.png">
+                  </a>
+                </div>
+                <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#compare">
+                  Quick view
+                </div>
+              </div>
+              <div class="item-inf text-center mt-3">
+                <p class="mdt mb-2">Lynn Ring</p>
+                <p>$7,000</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-3">
+            <div class="item-card-info">
+              <div class="card-prd">
+                <div class="img">
+                  <a href="#">
+                    <img src="./assets/img/product-detail/also-like7.png">
+                  </a>
+                </div>
+                <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#compare">
+                  Quick view
+                </div>
+              </div>
+              <div class="item-inf text-center mt-3">
+                <p class="mdt mb-2">Lynn Ring</p>
+                <p>$7,000</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-3">
+            <div class="item-card-info">
+              <div class="card-prd">
+                <div class="img">
+                  <a href="#">
+                    <img src="./assets/img/product-detail/also-like8.png">
+                  </a>
+                </div>
+                <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#compare">
+                  Quick view
+                </div>
+              </div>
+              <div class="item-inf text-center mt-3">
+                <p class="mdt mb-2">Lynn Ring</p>
+                <p>$7,000</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <div class="row">
+          <div class="col-3">
+            <div class="item-card-info">
+              <div class="card-prd">
+                <div class="img">
+                  <a href="#">
+                    <img src="./assets/img/product-detail/also-like5.png">
+                  </a>
+                </div>
+                <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#compare">
+                  Quick view
+                </div>
+              </div>
+              <div class="item-inf text-center mt-3">
+                <p class="mdt mb-2">Lynn Ring</p>
+                <p>$7,000</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-3">
+            <div class="item-card-info">
+              <div class="card-prd">
+                <div class="img">
+                  <a href="#">
+                    <img src="./assets/img/product-detail/also-like6.png">
+                  </a>
+                </div>
+                <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#compare">
+                  Quick view
+                </div>
+              </div>
+              <div class="item-inf text-center mt-3">
+                <p class="mdt mb-2">Lynn Ring</p>
+                <p>$7,000</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-3">
+            <div class="item-card-info">
+              <div class="card-prd">
+                <div class="img">
+                  <a href="#">
+                    <img src="./assets/img/product-detail/also-like7.png">
+                  </a>
+                </div>
+                <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#compare">
+                  Quick view
+                </div>
+              </div>
+              <div class="item-inf text-center mt-3">
+                <p class="mdt mb-2">Lynn Ring</p>
+                <p>$7,000</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-3">
+            <div class="item-card-info">
+              <div class="card-prd">
+                <div class="img">
+                  <a href="#">
+                    <img src="./assets/img/product-detail/also-like8.png">
+                  </a>
+                </div>
+                <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#compare">
+                  Quick view
+                </div>
+              </div>
+              <div class="item-inf text-center mt-3">
+                <p class="mdt mb-2">Lynn Ring</p>
+                <p>$7,000</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselalsolike" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselalsolike" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
   </div>
 </div>
