--- a/src/styles.css
+++ b/src/styles.css
@@ -134,16 +134,6 @@ label{
   background-color: #fff;
   color: #000;
 }
-
-/*BREADCRUMB*/
-.breadcrumb {
-  background-color: #FAF8F6;
-  padding-top: 0;
-}
-.breadcrumb-item {
-  padding: 0;
-}
-
 /*HEADER*/
 #logo {
   height: 40px;
@@ -165,8 +155,6 @@ label{
 .search-button .dropdown-content input {
   padding: 5px 10px;
 }
-/**/
-
 /*NAV*/
 .nav-link{
   padding:0px;
@@ -258,10 +246,27 @@ nav li:nth-child(1){
   margin-top:20px;
   margin-bottom:20px;
 }
+/*Table-summary*/
+.t-head{
+  background-color: #000;
+}
+.t-head p{
+  color:#fff;
+}
+/*ALL FOR BOOTSTRAP*/
 /*OFFCANVAS*/
 .offcanvas{
   --bs-offcanvas-width: 470px;
-
+}
+/*Modal*/
+.modal-content{
+  padding: 40px 60px 40px 60px;
+}
+.modal-dialog{
+  max-width:600px;
+}
+.quickview{
+  max-width:850px;
 }
 /*ACCORDION*/
 .accordion{
@@ -279,3 +284,46 @@ nav li:nth-child(1){
   --bs-accordion-active-bg: none;
   --bs-accordion-border-color: none;
 }
+/*Carousel*/
+.carousel-also{
+  margin-bottom:120px;
+  padding-top:40px;
+}
+/*CARD PRODUCT*/
+.card-prd{
+  position:relative;
+  overflow:hidden;
+}
+.card-prd-bt{
+  padding-top: 10px;
+  padding-bottom: 10px;
+  background:#fff;
+  text-align:center;
+  position:absolute;
+  bottom:0px;
+  width:100%;
+  display:none;
+}
+.card-prd:hover > .card-prd-bt{
+  display:block;
+  transition: 0.4s all;
+}
+.card-prd:hover > .img{
+  transform:scale(108%);
+  filter:brightness(99%);
+  transition:0.4s all;
+}
+.card-prd .modal .line{
+  margin-top:10px;
+  margin-bottom:10px;
+}
+/*BREADCRUMB*/
+.breadcrumb {
+  background-color: #FAF8F6;
+  padding-top: 0;
+}
+.breadcrumb-item {
+  padding: 0;
+}
+/*form check*/
+
