--- a/src/app/pages/rings/rings.component.html
+++ b/src/app/pages/rings/rings.component.html
@@ -223,7 +223,7 @@
             </div>
             <div class="item-inf text-center mt-3">
               <p class="mdt mb-2">Lynn Ring</p>
-              <p>$7,000</p>
+              <p class="smt">$7,000</p>
             </div>
           </div>
         </div>
@@ -259,7 +259,7 @@
             </div>
             <div class="item-inf text-center mt-3">
               <p class="mdt mb-2">Lynn Ring</p>
-              <p>$7,000</p>
+              <p class="smt">$7,000</p>
             </div>
           </div>
         </div>
@@ -277,13 +277,13 @@
             </div>
             <div class="item-inf text-center mt-3">
               <p class="mdt mb-2">Lynn Ring</p>
-              <p>$7,000</p>
+              <p class="smt">$7,000</p>
             </div>
           </div>
         </div>
       </div>
       <!--featured-product-start-->
-      <div class="mbt row cate-product">
+      <div class="mbt row">
         <div class="col-6">
           <div class="featured">
             <div class="featured-img">
@@ -310,7 +310,7 @@
             </div>
             <div class="item-inf text-center mt-3">
               <p class="mdt mb-2">Lynn Ring</p>
-              <p class="smt">$7,000</p>
+              <p class="smt mb-0">$7,000</p>
             </div>
           </div>
         </div>
@@ -328,14 +328,13 @@
             </div>
             <div class="item-inf text-center mt-3">
               <p class="mdt mb-2">Lynn Ring</p>
-              <p>$7,000</p>
+              <p class="smt mb-0">$7,000</p>
             </div>
           </div>
         </div>
       </div>
       <!--featured-product-end-->
-
-      <div class="row cate-product">
+      <div class="row cate-product ">
         <div class="col-3">
           <div class="item-card-info">
             <div class="card-prd">
