--- a/src/app/pages/product-detail/product-detail.component.html
+++ b/src/app/pages/product-detail/product-detail.component.html
@@ -393,10 +393,12 @@
                           <div class="quick-size my-3">
                             <select class="form-select smt">
                               <option selected>Select size</option>
-                              <option value="1">Highest Rating</option>
-                              <option value="2">Lowest Rating</option>
-                              <option value="3">Most Votes</option>
-                              <option value="3">Least Votes</option>
+                              <option value="1">3</option>
+                              <option value="2">3 1/2</option>
+                              <option value="3">4</option>
+                              <option value="3">4 1/2</option>
+                              <option value="3">5</option>
+                              <option value="3">5 1/2</option>
                             </select>
                           </div>
                           <button type="button" class="btn btn-pri mb-3" data-bs-dismiss="modal">Add to bag</button>
