--- a/src/app/pages/rings/rings.component.html
+++ b/src/app/pages/rings/rings.component.html
@@ -131,10 +131,12 @@
                         <div class="quick-size my-3">
                           <select class="form-select smt">
                             <option selected>Select size</option>
-                            <option value="1">Highest Rating</option>
-                            <option value="2">Lowest Rating</option>
-                            <option value="3">Most Votes</option>
-                            <option value="3">Least Votes</option>
+                            <option value="1">3</option>
+                            <option value="2">3 1/2</option>
+                            <option value="3">4</option>
+                            <option value="3">4 1/2</option>
+                            <option value="3">5</option>
+                            <option value="3">5 1/2</option>
                           </select>
                         </div>
                         <button type="button" class="btn btn-pri mb-3" data-bs-dismiss="modal">Add to bag</button>
@@ -149,7 +151,7 @@
             </div>
             <div class="item-inf text-center mt-3">
               <p class="mdt mb-2">Lynn Ring</p>
-              <p>$7,000</p>
+              <p class="smt item-price">$7,000</p>
             </div>
           </div>
         </div>
@@ -167,7 +169,7 @@
             </div>
             <div class="item-inf text-center mt-3">
               <p class="mdt mb-2">Lynn Ring</p>
-              <p>$7,000</p>
+              <p class="smt item-price">$7,000</p>
             </div>
           </div>
         </div>
@@ -185,7 +187,7 @@
             </div>
             <div class="item-inf text-center mt-3">
               <p class="mdt mb-2">Lynn Ring</p>
-              <p>$7,000</p>
+              <p class="smt item-price">$7,000</p>
             </div>
           </div>
         </div>
@@ -203,7 +205,7 @@
             </div>
             <div class="item-inf text-center mt-3">
               <p class="mdt mb-2">Lynn Ring</p>
-              <p>$7,000</p>
+              <p class="smt">$7,000</p>
             </div>
           </div>
         </div>
@@ -241,7 +243,7 @@
             </div>
             <div class="item-inf text-center mt-3">
               <p class="mdt mb-2">Lynn Ring</p>
-              <p>$7,000</p>
+              <p class="smt">$7,000</p>
             </div>
           </div>
         </div>
