--- a/src/app/pages/rings/rings.component.html
+++ b/src/app/pages/rings/rings.component.html
@@ -10,21 +10,46 @@
 
   <!--category-top-->
   <div class="category-top row pbt-100">
-    <div class="col-3 sub-cate-box">
-      <a routerLink="">
-        <img src="./assets/img/rings/1.png" />
-      </a>
+    <div class="col-3">
+        <a routerLink="">
+          <img src="./assets/img/rings/1.png" />
+        </a>
     </div>
-    <div class="col-3 sub-cate-box">
-      <a routerLink="#">
-        <img src="./assets/img/rings/2.png" />
-      </a>
+    <div class="col-3">
+      <div class="sub-cate-box">
+        <div class="sub-cate-img">
+          <a routerLink="#">
+            <img src="./assets/img/rings/2.png" />
+          </a>
+        </div>
+        <div class="sub-name">
+          <h6>Eternity</h6>
+        </div>
+      </div>
     </div>
-    <div class="col-3 sub-cate-box">
-      <a routerLink="#"><img src="./assets/img/rings/3.png" /></a>
+    <div class="col-3">
+      <div class="sub-cate-box">
+        <div class="sub-cate-img">
+          <a routerLink="#">
+            <img src="./assets/img/rings/3.png" />
+          </a>
+        </div>
+        <div class="sub-name">
+          <h6>Eternity</h6>
+        </div>
+      </div>
     </div>
-    <div class="col-3 sub-cate-box">
-      <a routerLink="#"><img src="./assets/img/rings/4.png" /></a>
+    <div class="col-3 ">
+      <div class="sub-cate-box">
+        <div class="sub-cate-img">
+          <a routerLink="#">
+            <img src="./assets/img/rings/4.png" />
+          </a>
+        </div>
+        <div class="sub-name">
+          <h6>Eternity</h6>
+        </div>
+      </div>
     </div>
   </div>
 
@@ -205,7 +230,7 @@
             </div>
             <div class="item-inf text-center mt-3">
               <p class="mdt mb-2">Lynn Ring</p>
-              <p class="smt">$7,000</p>
+              <p class="smt item-price">$7,000</p>
             </div>
           </div>
         </div>
@@ -243,7 +268,7 @@
             </div>
             <div class="item-inf text-center mt-3">
               <p class="mdt mb-2">Lynn Ring</p>
-              <p class="smt">$7,000</p>
+              <p class="smt item-price">$7,000</p>
             </div>
           </div>
         </div>
@@ -261,7 +286,7 @@
             </div>
             <div class="item-inf text-center mt-3">
               <p class="mdt mb-2">Lynn Ring</p>
-              <p class="smt">$7,000</p>
+              <p class="smt item-price">$7,000</p>
             </div>
           </div>
         </div>
@@ -279,7 +304,7 @@
             </div>
             <div class="item-inf text-center mt-3">
               <p class="mdt mb-2">Lynn Ring</p>
-              <p class="smt">$7,000</p>
+              <p class="smt item-price">$7,000</p>
             </div>
           </div>
         </div>
@@ -351,7 +376,7 @@
             </div>
             <div class="item-inf text-center mt-3">
               <p class="mdt mb-2">Lynn Ring</p>
-              <p class="smt">$7,000</p>
+              <p class="smt item-price">$7,000</p>
             </div>
           </div>
         </div>
@@ -369,7 +394,7 @@
             </div>
             <div class="item-inf text-center mt-3">
               <p class="mdt mb-2">Lynn Ring</p>
-              <p class="smt">$7,000</p>
+              <p class="smt item-price">$7,000</p>
             </div>
           </div>
         </div>
@@ -387,7 +412,7 @@
             </div>
             <div class="item-inf text-center mt-3">
               <p class="mdt mb-2">Lynn Ring</p>
-              <p class="smt">$7,000</p>
+              <p class="smt item-price">$7,000</p>
             </div>
           </div>
         </div>
@@ -405,7 +430,7 @@
             </div>
             <div class="item-inf text-center mt-3">
               <p class="mdt mb-2">Lynn Ring</p>
-              <p class="smt">$7,000</p>
+              <p class="smt item-price">$7,000</p>
             </div>
           </div>
         </div>
@@ -425,7 +450,7 @@
             </div>
             <div class="item-inf text-center mt-3">
               <p class="mdt mb-2">Lynn Ring</p>
-              <p class="smt">$7,000</p>
+              <p class="smt item-price">$7,000</p>
             </div>
           </div>
         </div>
@@ -443,7 +468,7 @@
             </div>
             <div class="item-inf text-center mt-3">
               <p class="mdt mb-2">Lynn Ring</p>
-              <p class="smt">$7,000</p>
+              <p class="smt item-price">$7,000</p>
             </div>
           </div>
         </div>
@@ -461,7 +486,7 @@
             </div>
             <div class="item-inf text-center mt-3">
               <p class="mdt mb-2">Lynn Ring</p>
-              <p class="smt">$7,000</p>
+              <p class="smt item-price">$7,000</p>
             </div>
           </div>
         </div>
@@ -479,7 +504,7 @@
             </div>
             <div class="item-inf text-center mt-3">
               <p class="mdt mb-2">Lynn Ring</p>
-              <p class="smt">$7,000</p>
+              <p class="smt item-price">$7,000</p>
             </div>
           </div>
         </div>
