--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -45,7 +45,7 @@
           <div class="row">
             <div class="col-3">
               <ul>
-                <li class="category"><a routerLink="/shop-all/rings">Rings</a></li>
+                <li class="category"><a routerLink="/shop-all/category">Rings</a></li>
                 <li><a routerLink="#">Eternity</a></li>
                 <li><a routerLink="#">Cocktail</a></li>
                 <li><a routerLink="#">Wedding</a></li>
