--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -143,7 +143,7 @@
 
     <!--copy-right-->
     <div class="copy-right text-center">
-      <p>© AGURI&PIJ.2022</p>
+      <p class="smt">© AGURI&PIJ.2022</p>
     </div>
   </div>
 </footer>
