--- a/src/app/pages/product-detail/product-detail.component.html
+++ b/src/app/pages/product-detail/product-detail.component.html
@@ -341,9 +341,9 @@
 <!--MAY YOU ALSO LIKE-->
 <div class="also-like">
   <h5 class="text-center">You May Also Like</h5>
-  <div id="carouselalsolike" class="carousel slide carousel-dark carousel-also" data-bs-ride="true">
+  <div id="carouselalsolike" class="carousel slide carousel-dark carousel-also" data-bs-ride="carousel">
     <div class="carousel-inner container">
-      <div class="carousel-item active">
+      <div class="carousel-item active" data-bs-interval="10000">
         <div class="row">
           <div class="col-3">
             <div class="item-card-info">
@@ -355,60 +355,6 @@
                 </div>
                 <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#quickview">
                   Quick view
-                </div>
-                <!--Modal Quick view-->
-                <div class="modal fade" id="quickview">
-                  <div class="modal-dialog modal-dialog-centered quickview">
-                    <div class="modal-content">
-                      <div class="row">
-                        <div class="col-7 ps-0">
-                          <!--Carousel quick view product-->
-                          <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
-                            <div class="carousel-indicators">
-                              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-                              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
-                            </div>
-                            <div class="carousel-inner">
-                              <div class="carousel-item active">
-                                <img src="./assets/img/product-detail/quickview1.png">
-                              </div>
-                              <div class="carousel-item">
-                                <img src="./assets/img/product-detail/quickview2.png">
-                              </div>
-                              <div class="carousel-item">
-                                <img src="./assets/img/product-detail/quickview3.png">
-                              </div>
-                              <div class="carousel-item">
-                                <img src="./assets/img/product-detail/quickview4.png">
-                              </div>
-                            </div>
-                          </div>
-                        </div>
-                        <div class="col-5 pe-0">
-                          <h5>Diamond Wire Ring</h5>
-                          <h5 class="my-3">$7,000</h5>
-                          <p>Quantity</p>
-                          <div class="quick-size my-3">
-                            <select class="form-select smt">
-                              <option selected>Select size</option>
-                              <option value="1">3</option>
-                              <option value="2">3 1/2</option>
-                              <option value="3">4</option>
-                              <option value="3">4 1/2</option>
-                              <option value="3">5</option>
-                              <option value="3">5 1/2</option>
-                            </select>
-                          </div>
-                          <button type="button" class="btn btn-pri mb-3" data-bs-dismiss="modal">Add to bag</button>
-                          <a href="">
-                            <p>View more detail</p>
-                          </a>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
                 </div>
               </div>
               <div class="item-inf text-center mt-3">
@@ -473,7 +419,7 @@
           </div>
         </div>
       </div>
-      <div class="carousel-item">
+      <div class="carousel-item" data-bs-interval="5000">
         <div class="row">
           <div class="col-3">
             <div class="item-card-info">
@@ -501,7 +447,7 @@
                     <img src="./assets/img/product-detail/also-like6.png">
                   </a>
                 </div>
-                <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#compare">
+                <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#quickview">
                   Quick view
                 </div>
               </div>
@@ -519,7 +465,7 @@
                     <img src="./assets/img/product-detail/also-like7.png">
                   </a>
                 </div>
-                <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#compare">
+                <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#quickview">
                   Quick view
                 </div>
               </div>
@@ -627,13 +573,67 @@
       </div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselalsolike" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Previous</span>
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
     </button>
     <button class="carousel-control-next" type="button" data-bs-target="#carouselalsolike" data-bs-slide="next">
       <span class="carousel-control-next-icon" aria-hidden="true"></span>
       <span class="visually-hidden">Next</span>
     </button>
+  </div>
+</div>
+<!--Modal Quick view-->
+<div class="modal fade" id="quickview">
+  <div class="modal-dialog modal-dialog-centered quickview">
+    <div class="modal-content">
+      <div class="row">
+        <div class="col-7 ps-0">
+          <!--Carousel quick view product-->
+          <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
+            <div class="carousel-indicators">
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
+            </div>
+            <div class="carousel-inner">
+              <div class="carousel-item active" data-bs-interval="4000">
+                <img src="./assets/img/product-detail/quickview1.png">
+              </div>
+              <div class="carousel-item" data-bs-interval="3000">
+                <img src="./assets/img/product-detail/quickview2.png">
+              </div>
+              <div class="carousel-item" data-bs-interval="2000">
+                <img src="./assets/img/product-detail/quickview3.png">
+              </div>
+              <div class="carousel-item">
+                <img src="./assets/img/product-detail/quickview4.png">
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-5 pe-0">
+          <h5>Diamond Wire Ring</h5>
+          <h5 class="my-3">$7,000</h5>
+          <p>Quantity</p>
+          <div class="quick-size my-3">
+            <select class="form-select smt">
+              <option selected>Select size</option>
+              <option value="1">3</option>
+              <option value="2">3 1/2</option>
+              <option value="3">4</option>
+              <option value="3">4 1/2</option>
+              <option value="3">5</option>
+              <option value="3">5 1/2</option>
+            </select>
+          </div>
+          <button type="button" class="btn btn-pri mb-3" data-bs-dismiss="modal">Add to bag</button>
+          <a href="">
+            <p>View more detail</p>
+          </a>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
 <!--REVIEW-->
@@ -848,3 +848,5 @@
     </div>
   </div>
 </div>
+
+
