--- a/src/app/pages/order-detail/order-detail.component.html
+++ b/src/app/pages/order-detail/order-detail.component.html
@@ -83,11 +83,9 @@
         <h6>$11,700</h6>
       </div>
       <p class="smt">Receive it in Vietnam in 4 - 6 business day/s with Express Shipping.</p>
-      <div class="form-check my-3">
-        <input class="form-check-input" type="radio" value="" id="flexCheckChecked" checked>
-        <label class="form-check-label smt" for="flexCheckChecked">
-          I accept the terms and conditions, privacy policy and legal notice
-        </label>
+      <div class="my-3">
+        <input type="checkbox" class="check-box" id="collection-1" name="collection-1" value="Sping Collection">
+        <label class="smt" for="collection-1">I accept the terms and conditions, privacy policy and legal notice</label><br>
       </div>
       <button class="btn btn-pri btnlg" type="button" routerLink="/check-out">Check out</button>
       <p class="mt-3 smt">Do you have a coupon? Add it at checkout.</p>
