--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,8 @@
 /*ALL*/
+@font-face{
+  src:url("//assets/libs/webfonts/Merchant-Regular.ttf");
+  font-family:Merchant;
+}
 *{
   padding: 0px;
   margin: 0px;
