--- a/src/app/pages/check-out/check-out.component.html
+++ b/src/app/pages/check-out/check-out.component.html
@@ -136,77 +136,85 @@
       <label class="smt" for="collection-1">I’ll pay all applicable duties, taxes and fees on delivery</label><br>
     </div>
   </div>
-      <div class="row">
+  <div class="row last-step">
         <div class="col-6 payment-method ps-0">
           <div class="t-head row align-middle py-3 mb-5">
             <p class="mb-0">Payment Method</p>
           </div>
           <p class="mdt">Please choose the payment method</p>
-          <div class="px-0 address-user user-input">
+          <div class="px-0 user-input">
             <label>Card number</label>
             <input class="inpu" type="text" required><br>
           </div>
-          <div class="px-0 address-user user-input">
+          <div class="px-0 number-on-card user-input">
             <label>Number on card</label>
             <input class="inpu" type="text" required><br>
           </div>
           <div class="row">
-            <div class="col-6">
+            <div class="col-6 ps-0">
               <label>Expire date</label>
               <input class="inpu" type="text" required><br>
             </div>
-            <div class="col-6">
+            <div class="col-6 pe-0">
               <label>CVV</label>
               <input class="inpu" type="text" required><br>
             </div>
           </div>
         </div>
         <div class="col-6 billing-summary">
-          <h5>BILLING SUMMARY</h5>
+          <h5 class="text-center mb-3">BILLING SUMMARY</h5>
           <div class="row">
-            <div class="col-10">
+            <div class="col-10 ps-0">
               <p>Diamonds and Gold Spark Ring</p>
             </div>
-            <div class="col">
+            <div class="col-2 pe-0">
               <p>$6,700</p>
             </div>
           </div>
           <p>x1</p>
           <div class="row">
-            <div class="col-10">
+            <div class="col-10 ps-0">
               <p>Diamonds and Gold Spark Ring</p>
             </div>
-            <div class="col">
+            <div class="col-2 pe-0">
               <p>$5,000</p>
             </div>
           </div>
           <p>x1</p>
           <div class="line"></div>
           <div class="row total-itm">
-            <div class="col-10">
+            <div class="col-10 ps-0">
               <p>Items Total</p>
             </div>
-            <div class="col">
+            <div class="col-2 pe-0">
               <p>$11,700</p>
             </div>
           </div>
           <div class="row ship-fee">
-            <div class="col-10">
+            <div class="col-10 ps-0">
               <p>Shipping Fee</p>
             </div>
-            <div class="col">
+            <div class="col-2 pe-0">
               <p>$0</p>
             </div>
           </div>
           <div class="row ship-fee">
-            <div class="col-10">
+            <div class="col-10 ps-0">
               <p>Discount (coupon)</p>
             </div>
-            <div class="col">
+            <div class="col-2 pe-0">
               <p>-$7,00</p>
             </div>
           </div>
           <div class="line"></div>
+          <div class="total-itm row">
+            <div class="col-10 ps-0">
+              <p class="mdt">Order Total</p>
+            </div>
+            <div class="col-2 p2-0">
+              <p class="mdt">$11,700</p>
+            </div>
+          </div>
         </div>
       </div>
 </div>
