--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,8 @@
 /*ALL*/
 @font-face{
-  src:url("//assets/libs/webfonts/font-awesome/Merchant-Regular.ttf");
+  src:url("//assets/libs/font-awesome/webfonts/merchant/OpenType-PS/Merchant-Regular.otf"),
+  src:url("//assets/libs/font-awesome/webfonts/merchant/OpenType-TT/Merchant-Regular.ttf")
+;
   font-family:"Merchant";
 }
 *{
