--- a/src/app/pages/product-detail/product-detail.component.html
+++ b/src/app/pages/product-detail/product-detail.component.html
@@ -41,11 +41,17 @@
         <h5 class="my-2">$6,700</h5>
         <p class="mdt">Complimentary Shipping & Returns</p>
         <div class="line mb-3"></div>
-        <p class="mdt">Quantity</p>
+
+        <p class="mdt">Quantity
+          <span class="buttons_added ml-1">
+            <input aria-label="quantity" class="input-qty text-center" max="100" min="1" name="" type="number" value="">
+          </span>
+        </p>
+
         <div class="line mb-3"></div>
         <div class="find-size">
           <div class="d-flex" data-bs-toggle="offcanvas" data-bs-target="#findsize">
-            <p class="mdt me-auto mb-2">Find your size</p>
+            <p class="mdt me-auto mb-2">※ Find your size</p>
             <i class="fa-solid fa-chevron-right"></i>
           </div>
           <!--OFFCANVSS FIND SIZE-->
