--- a/src/app/pages/product-detail/product-detail.component.html
+++ b/src/app/pages/product-detail/product-detail.component.html
@@ -57,7 +57,7 @@
           <!--OFFCANVSS FIND SIZE-->
           <div class="offcanvas offcanvas-end" id="findsize">
             <div class="offcanvas-header">
-              <h5 class="offcanvas-title mt-3" id="findsize">Find Your Ring Size</h5>
+              <h5 class="offcanvas-title mt-3">Find Your Ring Size</h5>
               <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
             </div>
             <div class="offcanvas-body">
@@ -138,7 +138,7 @@
           <!--OFFCANVSS ADD BAG-->
           <div class="offcanvas offcanvas-end" id="addbag">
             <div class="offcanvas-header">
-              <h5 class="offcanvas-title mt-3" id="addbag">Shopping Bag</h5>
+              <h5 class="offcanvas-title mt-3">Shopping Bag</h5>
               <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
             </div>
             <div class="offcanvas-body">
@@ -185,7 +185,7 @@
           <!--OFFCANVSS ASK ADVISOR-->
           <div class="offcanvas offcanvas-end" id="askadvisor">
             <div class="offcanvas-header">
-              <h5 class="offcanvas-title mt-3" id="askadvisor">Aguri At Your Service</h5>
+              <h5 class="offcanvas-title mt-3">Aguri At Your Service</h5>
               <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
             </div>
             <div class="offcanvas-body">
