--- a/src/app/pages/shop-all/shop-all.component.html
+++ b/src/app/pages/shop-all/shop-all.component.html
@@ -98,8 +98,15 @@
         </div>
       </div>
       <div class="col-2">
-        <div class="prod-ring4 mbt">
-          Shop all
+        <div class="prod-ring4 to-show-all mbt">
+          <div class="all-img">
+            <a href="#">
+              <img src="./assets/img/shop-all/all-bg.png">
+            </a>
+          </div>
+          <div class="all-name">
+            Shop all
+          </div>
         </div>
         <div class="prod-ring4 mbt">
           <a href="#">
