--- a/src/app/pages/about-us/about-us.component.html
+++ b/src/app/pages/about-us/about-us.component.html
@@ -1,19 +1,24 @@
-<div class="container pt-60">
-  <!--introduction-->
-  <div class="row introduction pbt-100">
-    <div class="col-5 text-center">
-      <h5>Introduction</h5>
-    </div>
-    <div class="col-7">
-      AGURI is crafting the next generation of heirloom pieces. Each one is designed to transition seamlessly
-      from one wearer to the next and complement each individual’s style in a unique way. Designed and produced in
-      New York City, AGURI’s small team of expert jewelers utilizes recycled precious metals and reclaimed or
-      ethically mined gemstones in each piece, sparking new life into materials that may otherwise be obsolete.
-      Precious metals and reclaimed or ethically mined gemstones in each piece, sparking new life into materials
-      that may otherwise be obsolete reclaimed or ethically.
+<div class="container mt-60">
+  <!--Dear-->
+  <div class="dear-top mt-40">
+    <div class="row">
+      <div class="col"></div>
+      <div class="col-3">
+        <h5 class="">Introdution</h5>
+      </div>
+      <div class="dear-content col-8">
+        <p class="smt">AGURI is crafting the next generation of heirloom pieces. Each one is designed to transition seamlessly
+          from one wearer to the next and complement each individual’s style in a unique way.
+        </p>
+        <p class="smt">Designed and produced in New York City, AGURI’s small team of expert jewelers utilizes recycled precious metals and reclaimed or
+          ethically mined gemstones in each piece, sparking new life into materials that may otherwise be obsolete.
+          Precious metals and reclaimed or ethically mined gemstones in each piece, sparking new life into materials
+          that may otherwise be obsolete reclaimed or ethically.</p>
+      </div>
     </div>
   </div>
-  <div class="intro-img row pbt-100">
+  <!--introduction-->
+  <div class="intro-img row mbt-120">
       <div class="col-12">
         <img src="./assets/img/about-us/1.png" />
       </div>
@@ -23,48 +28,52 @@
         <h4>PASCAL IMITATION JEWELLERY</h4>
       </div>
   </div>
-
   <!--the-brand-->
-  <div class="the-brand pbt-100 row">
-    <div class="col-12">
-      <img src="./assets/img/about-us/2.png">
+  <div class="row who mbt-120">
+    <div class="col-6 who-left">
+      <img src="./assets/img/about-us/about1.jpg"/>
     </div>
-    <div class="the-brand-text col-4">
-      <h4 class="mbt">The Brand</h4>
-      <p>AGURI is crafting the next generation of heirloom pieces. Each one is designed to transition seamlessly
-        from one wearer to the next and complement each individual’s style in a unique way. Designed and produced in
-        New York City, AGURI’s small team of expert jewelers utilizes recycled precious metals and reclaimed or
-        ethically mined gemstones in each piece.</p>
+    <div class="col-8 who-right row ps-0">
+      <div class="col-6 who-img2">
+        <img src="./assets/img/about-us/about2.png"/>
+      </div>
+      <div class="col-6 who-content">
+        <h4 class="mb-3">About Aguri Brand</h4>
+        <p class="smt">AGURI is crafting the next generation of heirloom pieces. Each one is designed to transition seamlessly from
+          one wearer to the next and complement each individual’s style in a unique way. Designed and produced in New York
+          City, AGURI’s small team of expert jewelers utilizes recycled precious metals and reclaimed or ethically mined
+          gemstones in each piece.</p>
+      </div>
     </div>
   </div>
 </div>
 
 <!--our-vision-->
-<div class="our-vision">
-  <div class="our-vision-img">
-    <img src="./assets/img/about-us/3.png" />
-  </div>
+<div class="our-vision mbt-120">
   <div class="row">
-    <div class="col-6"></div>
-    <div class="our-vision-text col-6">
-      <h4 class="mbt">Our Vision</h4>
-      <p>Forward-thinking fine jewelry essentials for individuals of all genders that breathe new life into classic
-        silhouettes. Forward-thinking fine jewelry essentials for individuals of all genders that breathe new life into
-        classic silhouettes. Forward-thinking fine jewelry essentials for individuals of all genders that breathe new
-        life into classic silhouettes. Forward-thinking fine jewelry essentials for individuals of all genders that
-        breathe new life into classic silhouettes. Forward-thinking fine jewelry essentials for individuals of all
-        genders classic silhouettes.</p>
+    <div class="col-6 px-0">
+      <img src="./assets/img/about-us/3.png"/>
+    </div>
+    <div class="col-6 vision-content pe-0">
+      <div class="vision-inner">
+        <h4 class="mb-3">Our Vision</h4>
+        <p class="smt">Forward-thinking fine jewelry essentials for individuals of all genders that breathe new life into classic
+          silhouettes. Forward-thinking fine jewelry essentials for individuals of all genders that breathe new life into
+          classic silhouettes. Forward-thinking fine jewelry essentials for individuals of all genders that breathe new
+          life into classic silhouettes. Forward-thinking fine jewelry essentials for individuals of all genders that
+          breathe new life into classic silhouettes. Forward-thinking fine jewelry essentials for individuals of all
+          genders classic silhouettes.</p>
+      </div>
     </div>
   </div>
 </div>
 
-<div class="container">
+<div class="container mbt-120">
   <!--our-mission-->
-  <div class="row our-mission pbt-100">
+  <div class="row our-mission">
     <div class="our-mission-text col-5">
-      <div class="col-6"><h4>Our Mission</h4></div>
-      <div class="col-6"><hr></div>
-      <p class="our-mission-text-1">Forward-thinking fine jewelry essentials for individuals of all genders that breathe new life into classic
+      <h4 class="mb-3">Our Mission</h4>
+      <p class="smt">Forward-thinking fine jewelry essentials for individuals of all genders that breathe new life into classic
         silhouettes. Forward-thinking fine jewelry essentials for individuals of all genders that breathe new life into
         classic silhouettes. Forward-thinking fine jewelry essentials for individuals of all genders that breathe new
         life into classic silhouettes. Forward-thinking fine jewelry essentials for individuals of all genders that
