--- a/src/app/pages/guide/guide.component.html
+++ b/src/app/pages/guide/guide.component.html
@@ -1,3 +1,7 @@
+<!--Banner-->
+<div class="guide-banner">
+  <img src="./assets/img/guide/banner.png" />
+</div>
 <div class="container pt-60">
   <!--jewellery-guide-->
   <div class="row pbt-100">
