--- a/src/app/pages/product-detail/product-detail.component.html
+++ b/src/app/pages/product-detail/product-detail.component.html
@@ -349,7 +349,7 @@
   <h5 class="text-center">You May Also Like</h5>
   <div id="carouselalsolike" class="carousel slide carousel-dark carousel-also" data-bs-ride="carousel">
     <div class="carousel-inner container">
-      <div class="carousel-item active" data-bs-interval="10000">
+      <div class="carousel-item active" data-bs-interval="6000">
         <div class="row">
           <div class="col-3">
             <div class="item-card-info">
@@ -501,7 +501,7 @@
           </div>
         </div>
       </div>
-      <div class="carousel-item">
+      <div class="carousel-item" data-bs-interval="5000">
         <div class="row">
           <div class="col-3">
             <div class="item-card-info">
@@ -595,7 +595,7 @@
         <div class="row">
           <div class="col-7 ps-0">
             <!--Carousel quick view product-->
-            <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
+            <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
               <div class="carousel-indicators">
                 <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
                 <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -603,13 +603,13 @@
                 <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
               </div>
               <div class="carousel-inner">
-                <div class="carousel-item active" data-bs-interval="4000">
+                <div class="carousel-item active" data-bs-interval="5000">
                   <img src="./assets/img/product-detail/quickview1.png">
                 </div>
                 <div class="carousel-item" data-bs-interval="3000">
                   <img src="./assets/img/product-detail/quickview2.png">
                 </div>
-                <div class="carousel-item" data-bs-interval="2000">
+                <div class="carousel-item" data-bs-interval="3000">
                   <img src="./assets/img/product-detail/quickview3.png">
                 </div>
                 <div class="carousel-item">
